--- a/app/views/projetos/_scrum.html.erb
+++ b/app/views/projetos/_scrum.html.erb
@@ -14,6 +14,9 @@
                   <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
                   <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
+                  <% if @membroUser.id == tarefa.user_id %>
+                    <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
+                  <% end %>
                   </div>
                 </div>
               </div>
@@ -30,6 +33,9 @@
                   <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
                   <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
+                  <% if @membroUser.id == tarefa.user_id %>
+                    <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
+                  <% end %>
                   </div>
                 </div>
               </div>
@@ -47,22 +53,9 @@
                   <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
                   <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          <% end %>
-        </div>
-
-        <div class="col-md-4">
-          <h2>Done</h2>
-          <% @projeto.tarefas.where(etapa: 4).each do |tarefa| %>
-            <%= link_to projeto_tarefa_path(projeto_id: @projeto.id, tarefa_id: tarefa.id) do %>
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="card-content">
-                  <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
+                  <% if @membroUser.id == tarefa.user_id %>
+                    <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
+                  <% end %>
                   </div>
                 </div>
               </div>
@@ -72,6 +65,25 @@
 
         <div class="col-md-4">
           <h2>Testing</h2>
+          <% @projeto.tarefas.where(etapa: 4).each do |tarefa| %>
+            <%= link_to projeto_tarefa_path(projeto_id: @projeto.id, tarefa_id: tarefa.id) do %>
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="card-content">
+                  <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
+                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
+                  <% if @membroUser.id == tarefa.user_id %>
+                    <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
+                  <% end %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+
+        <div class="col-md-4">
+          <h2>Done</h2>
           <% @projeto.tarefas.where(etapa: 5).each do |tarefa| %>
             <%= link_to projeto_tarefa_path(projeto_id: @projeto.id, tarefa_id: tarefa.id) do %>
               <div class="card mb-3">
@@ -79,6 +91,9 @@
                   <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
                   <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
+                  <% if @membroUser.id == tarefa.user_id %>
+                    <h5 class="card-title"> entregue por:<%= @membroUser.nome %></h5>
+                  <% end %>
                   </div>
                 </div>
               </div>
