--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil</title>
-  <%= stylesheet_link_tag 'home', media: 'all' %>
-  
+  <%= stylesheet_link_tag 'profile', media: 'all' %>  
 </head>
 
 <body>
