--- a/app/views/projetos/new.html.erb
+++ b/app/views/projetos/new.html.erb
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Criar Novo Projeto</title>
   <%= stylesheet_link_tag 'index', media: 'all' %>
+
 </head>
 <body>
-  <div class="container">
+  <div class="formularios">
     <div class="form-container login-form">
       <h2>Criar Novo Projeto</h2>
 
@@ -56,7 +57,7 @@
         <label for="codigo_de_acesso">Código de Acesso:</label>
         <input type="text" id="codigo_de_acesso" name="codigo_de_acesso">
         <br>
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Enviar" >
       </form>
       
     </div>
