--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -21,6 +21,12 @@ body {
   align-items: center; /* Center items horizontally */
 }
 
+.container{
+  display: flex;
+  justify-content:center;
+  align-items:start; /* Center items horizontally */
+}
+
 .form-container {
   background-color: #444;
   padding: 20px;
@@ -82,6 +88,9 @@ button:hover {
 @media (max-width: 600px) {
   .container {
     flex-direction: column;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; /* Center items horizontally */
   }
 
   .form-container {
