--- a/app/views/projetos/_scrum.html.erb
+++ b/app/views/projetos/_scrum.html.erb
@@ -11,8 +11,8 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
-                  <h5 class="card-title">responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
+                  <h5 class="card-title">Vence em: <%= tarefa.vencimento %></h5>
+                  <h5 class="card-title">Responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
                   <% if @membroUser.id == tarefa.user_id %>
                     <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
                   <% end %>
@@ -31,8 +31,8 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
-                  <h5 class="card-title">responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
+                  <h5 class="card-title">Vence em: <%= tarefa.vencimento %></h5>
+                  <h5 class="card-title">Responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
                   <% if @membroUser.id == tarefa.user_id %>
                     <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
                   <% end %>
@@ -51,8 +51,8 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
-                  <h5 class="card-title">responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
+                  <h5 class="card-title">Vence em: <%= tarefa.vencimento %></h5>
+                  <h5 class="card-title">Responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
                   <% if @membroUser.id == tarefa.user_id %>
                     <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
                   <% end %>
@@ -71,8 +71,8 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
-                  <h5 class="card-title">responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
+                  <h5 class="card-title">Vence em: <%= tarefa.vencimento %></h5>
+                  <h5 class="card-title">Responsavel: <%= (@membrosUsers.find { |user| user.id == tarefa.user_id }.nome) %></h5>
                   <% if @membroUser.id == tarefa.user_id %>
                     <%= link_to 'Avançar Etapa', avancar_etapa_projeto_tarefa_path(projeto_id: @projeto.id, id: tarefa.id), method: :PATCH, data: { turbo: false } %>
                   <% end %>
@@ -91,7 +91,6 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title"><%= tarefa.descricao_tarefa %></h5>
-                  <h5 class="card-title">vence em: <%= tarefa.vencimento %></h5>
                   <% if @membroUser.id == tarefa.user_id %>
                     <h5 class="card-title"> entregue por:<%= @membroUser.nome %></h5>
                   <% end %>
