--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,14 +29,7 @@
     <meta property="og:url" content="https://projecttool.onrender.com/" />
     <meta property="og:title" content="ProjectTool - Gerenciador de Projetos de Software." />
     <meta property="og:description" content="Uma ferramenta para gerenciar projetos de software de forma compartilhada, utilizando metodologias ágeis." />
-    <meta property="og:image" content="/assetsReadme/projectToolimg.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://projecttool.onrender.com/" />
-    <meta property="twitter:title" content="ProjectTool - Gerenciador de Projetos de Software." />
-    <meta property="twitter:description" content="Uma ferramenta para gerenciar projetos de software de forma compartilhada, utilizando metodologias ágeis." />
-    <meta property="twitter:image" content="/assetsReadme/projectToolimg.png" />
+    <meta property="og:image" content="https://projecttool.onrender.com/image" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
